# testResend

hds_udp/: gitconfig  makefile
hds_udp/buffer/: HDS_Buffer_Pool.cpp  HDS_Buffer_Pool.h
hds_udp/common/: Atomic_Bitmap.h  AutoLock.h  HDS_Blocking_Queue.h  HDS_Error.h  HDS_Event.h  HDS_Mutex.h  HDS_ReadCDR.h  HDS_Socket_Utils.h  HDS_Thread.h  HDS_Timer_Wheel.cpp  HDS_Timer_Wheel.h  HDS_Unistd.h  HDS_WriteCDR.h  HP_Map.h  HP_Set.h  atomic_t.h  makefile  s_list.h
hds_udp/config/: HDS_UDP_Kernel_Config.h
hds_udp/connection/: HDS_UDP_Complex_Connection.cpp  HDS_UDP_Complex_Connection.h  HDS_UDP_Connection.cpp  HDS_UDP_Connection.h  HDS_UDP_Connection_Ack_Info_Collector.cpp  HDS_UDP_Connection_Ack_Info_Collector.h  HDS_UDP_Connection_Recv_Wait_ACK_Queue.cpp  HDS_UDP_Connection_Recv_Wait_ACK_Queue.h  HDS_UDP_Connection_Sender.cpp  HDS_UDP_Connection_Sender.h  HDS_UDP_Connection_Timer.cpp  HDS_UDP_Connection_Timer.h  HDS_UDP_Simple_Connection.cpp  HDS_UDP_Simple_Connection.h
hds_udp/include/: HDS_UDP.cpp  HDS_UDP.h
hds_udp/kernel/: HDS_UDP_Kernel.h  HDS_UDP_Kernel_Data_Filter.cpp  HDS_UDP_Kernel_Data_Filter.h  makefile
hds_udp/kernel/epoll/: HDS_Epoll_Server.cpp  HDS_Epoll_Server.h  makefile
hds_udp/kernel/iocp/: HDS_Iocp_Server.cpp  HDS_Iocp_Server.h
hds_udp/kernel/sock/: UDP_Socket_Server.cpp  UDP_Socket_Server.h
hds_udp/method_processor/: HDS_UDP_Method_Processor.cpp  HDS_UDP_Method_Processor.h  makefile
hds_udp/test/: main.cpp  makefile  test_base.h  test_simple_send.h
hds_udp/win32/: HDS_UDP_3.0.sln  HDS_UDP_3.0.vcproj  stdafx.cpp
tysocks/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  config
tysocks/3rd/librdns/: CMakeLists.txt
tysocks/client/: TCPServer.cpp  TCPServer.hpp  main.cpp
tysocks/cmake/: FindLibEV.cmake
tysocks/common/: INIReader.cpp  INIReader.hpp  TCPHandler.cpp  TCPHandler.hpp  TYP.hpp  ini.c  logging.hpp  sockopt.hpp  utils.hpp
tysocks/server/: Connector.cpp  Connector.hpp  DNS.cpp  DNS.hpp  S5Server.cpp  S5Server.hpp  main.cpp
